<resources>
    <string name="app_name">Find</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="wrong">Failure</string>
    <string name="title_activity_main">Find</string>
    <string name="no_contacts">No contacts found!</string>
    <string name="unknown_location">Unknown</string>
    <string name="title_activity_contact_position">Map</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="search_info">Search by number or e-mail</string>
</resources>
